# SimpliFinance

./: .gitignore  README.md  build.sh  render.yaml  requirements.txt
mysite/: settings.py  urls.py
mysite/migrations/: 0001_initial.py
mysite/static/mysite/assets/css/: index2main.css
mysite/templates/: index.html  index3.html
render/: index.html
simpliFinance/: db.sqlite3  pyproject.toml
simpliFinance/env/: pyvenv.cfg
simpliFinance/mysite/: settings.py  urls.py
simpliFinance/mysite/templates/: homepage.html  index2.html
simpliFinance/render/: index.html  views.py
